# desktopTest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/: CMakeLists.txt  FetchFmt.cmake  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  dbManager.cpp  dbManager.hpp  dbSetup.txt  itemWindow.cpp  itemWindow.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  plotWindow.cpp  plotWindow.hpp  searchWindow.cpp  searchWindow.hpp
src/lib/: category.hpp  dbManager.cpp  dbManager.hpp  item.hpp  placement.hpp
